src/parser.output
Terminals unused in grammar

    PACKAGE
    _
    YIELD
    eof


Grammar

    0 $accept: CompilationUnit $end

    1 Literal: integerLiteral
    2        | FloatingPointLiteral
    3        | booleanLiteral
    4        | characterLiteral
    5        | stringLiteral
    6        | textBlock
    7        | nullLiteral

    8 PrimitiveType: NumericType
    9              | BOOLEAN

   10 NumericType: IntegralType
   11            | FloatingPointType

   12 IntegralType: BYTE
   13             | SHORT
   14             | INT
   15             | LONG
   16             | CHAR

   17 FloatingPointType: FLOAT
   18                  | DOUBLE

   19 Dims: '[' ']'
   20     | '[' ']' Dims

   21 Name: SimpleName
   22     | QualifiedName

   23 SimpleName: Identifier

   24 QualifiedName: Name '.' SimpleName

   25 CompilationUnit: OrdinaryCompilationUnit

   26 OrdinaryCompilationUnit: TopLevelClassOrInterfaceDeclarations

   27 TopLevelClassOrInterfaceDeclarations: %empty
   28                                     | TopLevelClassOrInterfaceDeclarations TopLevelClassOrInterfaceDeclaration

   29 TopLevelClassOrInterfaceDeclaration: ClassDeclaration
   30                                    | ';'

   31 ClassDeclaration: Modifiers CLASS G S ClassBody
   32                 | CLASS G S ClassBody

   33 Modifiers: Modifier
   34          | Modifier Modifiers

   35 Modifier: PUBLIC
   36         | PRIVATE
   37         | STATIC
   38         | FINAL

   39 ClassBody: '{' ClassBodyDeclarations '}'

   40 ClassBodyDeclarations: %empty
   41                      | ClassBodyDeclarations ClassBodyDeclaration

   42 ClassBodyDeclaration: FieldDeclaration
   43                     | MethodDeclaration
   44                     | StaticInitializer
   45                     | ConstructorDeclaration

   46 FieldDeclaration: Modifiers PrimitiveType VariableDeclaratorList ';'
   47                 | PrimitiveType VariableDeclaratorList ';'

   48 VariableDeclaratorList: VariableDeclarator
   49                       | VariableDeclaratorList ',' VariableDeclarator

   50 VariableDeclarator: Declarator
   51                   | Declarator '=' VariableInitializer

   52 Declarator: Identifier
   53           | Declarator '[' ']'

   54 MethodDeclaration: MethodHeader MethodBody

   55 MethodHeader: Modifiers PrimitiveType MethodorConstrDeclarator
   56             | PrimitiveType MethodorConstrDeclarator
   57             | Modifiers VOID2 MethodorConstrDeclarator
   58             | VOID2 MethodorConstrDeclarator

   59 VOID2: VOID

   60 MethodorConstrDeclarator: SimpleName2 '(' A FormalParameterList ')' NEXT_QUAD
   61                         | SimpleName2 '(' A ')' Dimsy

   62 SimpleName2: Identifier

   63 VariableInitializer: Expression

   64 Dimsy: %empty
   65      | Dims

   66 FormalParameterList: FormalParameter
   67                    | FormalParameterList ',' NEXT_QUAD FormalParameter

   68 FormalParameter: PrimitiveType SimpleName2 Dimsy

   69 MethodBody: Block
   70           | ';'

   71 StaticInitializer: STATIC Block

   72 ConstructorDeclaration: Modifiers MethodorConstrDeclarator ConstructorBody

   73 ConstructorBody: '{' ExplicitConstructorInvocation BlockStatements '}'
   74                | '{' BlockStatements '}'

   75 ExplicitConstructorInvocation: THIS '(' ArgumentListy ')' ';'

   76 ArgumentListy: %empty
   77              | ArgumentList

   78 ClassBodyy: %empty
   79           | ClassBody

   80 Block: '{' ChangeTable BlockStatements '}'
   81      | '{' ChangeTable '}'

   82 BlockStatements: BlockStatement
   83                | BlockStatements NEXT_QUAD BlockStatement

   84 BlockStatement: Declaration_list
   85               | Statement

   86 Declaration_list: LocalVariableDeclaration ';'
   87                 | ClassDeclaration

   88 LocalVariableDeclaration: PrimitiveType VariableDeclaratorList

   89 Statement: StatementWithoutTrailingSubstatement
   90          | LabeledStatement
   91          | IfThenStatement
   92          | IfThenElseStatement
   93          | WhileStatement
   94          | ForStatement

   95 StatementNoShortIf: StatementWithoutTrailingSubstatement
   96                   | LabeledStatementNoShortIf
   97                   | IfThenElseStatementNoShortIf
   98                   | WhileStatementNoShortIf
   99                   | ForStatementNoShortIf

  100 StatementWithoutTrailingSubstatement: Block
  101                                     | ';'
  102                                     | ExpressionStatement
  103                                     | BreakStatement
  104                                     | ContinueStatement
  105                                     | ReturnStatement
  106                                     | ThrowStatement

  107 LabeledStatement: SimpleName ':' NEXT_QUAD Statement

  108 LabeledStatementNoShortIf: SimpleName ':' NEXT_QUAD StatementNoShortIf

  109 ExpressionStatement: StatementExpression ';'

  110 StatementExpression: Assignment
  111                    | PreIncrementExpression
  112                    | PreDecrementExpression
  113                    | PostIncrementExpression
  114                    | PostDecrementExpression
  115                    | MethodInvocation
  116                    | ClassInstanceCreationExpression

  117 $@1: %empty

  118 IF_CODE: IF $@1 '(' Expression ')'

  119 IfThenStatement: IF_CODE NEXT_QUAD Statement

  120 IfThenElseStatement: IF_CODE NEXT_QUAD StatementNoShortIf N ELSE NEXT_QUAD Statement

  121 IfThenElseStatementNoShortIf: IF_CODE NEXT_QUAD StatementNoShortIf N ELSE NEXT_QUAD StatementNoShortIf

  122 WhileStatement: WHILE '(' NEXT_QUAD EXPR_CODE ')' NEXT_QUAD Statement

  123 WhileStatementNoShortIf: WHILE '(' NEXT_QUAD EXPR_CODE ')' NEXT_QUAD StatementNoShortIf

  124 ForStatement: BasicForHeader Statement
  125             | EnhancedForHeader Statement

  126 ForStatementNoShortIf: BasicForHeader StatementNoShortIf
  127                      | EnhancedForHeader StatementNoShortIf

  128 BasicForHeader: FOR '(' ForInity ';' Expressiony ';' ForUpdatey ')'

  129 EnhancedForHeader: FOR '(' LocalVariableDeclaration ':' Expression ')'

  130 ForInity: %empty
  131         | ForInit

  132 Expressiony: %empty
  133            | Expression

  134 ForUpdatey: %empty
  135           | ForUpdate

  136 ForInit: StatementExpressionList
  137        | LocalVariableDeclaration

  138 ForUpdate: StatementExpressionList

  139 StatementExpressionList: StatementExpression
  140                        | StatementExpression ',' StatementExpressionList

  141 BreakStatement: BREAK SimpleName ';'
  142               | BREAK ';'

  143 ContinueStatement: CONTINUE SimpleName ';'
  144                  | CONTINUE ';'

  145 ReturnStatement: RETURN Expression ';'
  146                | RETURN ';'

  147 ThrowStatement: THROW Expression ';'

  148 $@2: %empty

  149 EXPR_CODE: $@2 StatementExpression

  150 N: %empty

  151 Primary: PrimaryNoNewArray
  152        | ArrayCreationExpression

  153 PrimaryNoNewArray: Literal
  154                  | THIS
  155                  | '(' Expression ')'
  156                  | ClassInstanceCreationExpression
  157                  | ArrayAccess
  158                  | MethodInvocation

  159 ClassInstanceCreationExpression: UnqualifiedClassInstanceCreationExpression
  160                                | Name '.' UnqualifiedClassInstanceCreationExpression
  161                                | Primary '.' UnqualifiedClassInstanceCreationExpression

  162 UnqualifiedClassInstanceCreationExpression: NEW ClassOrInterfaceTypeToInstantiate '(' ArgumentListy ')' ClassBodyy

  163 ClassOrInterfaceTypeToInstantiate: SimpleName ClassOrInterfaceTypeToInstant TypeArgumentsOrDiamondy

  164 TypeArgumentsOrDiamondy: %empty
  165                        | TypeArgumentsOrDiamond

  166 ClassOrInterfaceTypeToInstant: %empty
  167                              | '.' SimpleName ClassOrInterfaceTypeToInstant

  168 TypeArgumentsOrDiamond: '<' '>'

  169 ArrayAccess: Name '[' Expression ']'
  170            | ArrayAccess '[' Expression ']'

  171 $@3: %empty

  172 MethodInvocation: Name '(' $@3 ArgumentListy ')'
  173                 | Primary '.' SimpleName '(' ArgumentListy ')'

  174 ArgumentList: Expression
  175             | ArgumentList ',' Expression

  176 ArrayCreationExpression: NEW PrimitiveType DimExprs Dimsy

  177 DimExprs: DimExpr
  178         | DimExprs DimExpr

  179 DimExpr: '[' Expression ']'

  180 Expression: AssignmentExpression

  181 AssignmentExpression: Assignment
  182                     | ConditionalExpression

  183 $@4: %empty

  184 Assignment: LeftHandSide AssignmentOperator $@4 AssignmentExpression

  185 LeftHandSide: Name
  186             | ArrayAccess

  187 AssignmentOperator: '='
  188                   | DIV_ASSIGN
  189                   | MUL_ASSIGN
  190                   | MOD_ASSIGN
  191                   | ADD_ASSIGN
  192                   | SUB_ASSIGN
  193                   | LEFT_ASSIGN
  194                   | RIGHT_ASSIGN
  195                   | UNSIGNED_RIGHT_ASSIGN
  196                   | AND_ASSIGN
  197                   | XOR_ASSIGN
  198                   | OR_ASSIGN

  199 ConditionalExpression: GOTO_COND NEXT_QUAD Expression WRITE_GOTO ':' NEXT_QUAD ConditionalExpression
  200                      | ConditionalOrExpression

  201 GOTO_COND: ConditionalOrExpression '?'

  202 WRITE_GOTO: %empty

  203 ConditionalOrExpression: GOTO_OR NEXT_QUAD ConditionalAndExpression
  204                        | ConditionalAndExpression

  205 GOTO_OR: ConditionalOrExpression OR_OP

  206 ConditionalAndExpression: GOTO_AND NEXT_QUAD InclusiveOrExpression
  207                         | InclusiveOrExpression

  208 GOTO_AND: ConditionalAndExpression AND_OP

  209 InclusiveOrExpression: InclusiveOrExpression '|' ExclusiveOrExpression
  210                      | ExclusiveOrExpression

  211 ExclusiveOrExpression: ExclusiveOrExpression '^' AndExpression
  212                      | AndExpression

  213 AndExpression: AndExpression '&' EqualityExpression
  214              | EqualityExpression

  215 EqualityExpression: EqualityExpression EQ_OP RelationalExpression
  216                   | EqualityExpression NE_OP RelationalExpression
  217                   | RelationalExpression

  218 RelationalExpression: RelationalExpression '<' ShiftExpression
  219                     | RelationalExpression '>' ShiftExpression
  220                     | RelationalExpression GE_OP ShiftExpression
  221                     | RelationalExpression LE_OP ShiftExpression
  222                     | ShiftExpression

  223 ShiftExpression: ShiftExpression LEFT_OP AdditiveExpression
  224                | ShiftExpression RIGHT_OP AdditiveExpression
  225                | ShiftExpression UNSIGNED_RIGHT AdditiveExpression
  226                | AdditiveExpression

  227 AdditiveExpression: AdditiveExpression '+' MultiplicativeExpression
  228                   | AdditiveExpression '-' MultiplicativeExpression
  229                   | MultiplicativeExpression

  230 MultiplicativeExpression: MultiplicativeExpression '*' UnaryExpression
  231                         | MultiplicativeExpression '/' UnaryExpression
  232                         | MultiplicativeExpression '%' UnaryExpression
  233                         | UnaryExpression

  234 UnaryExpression: PreIncrementExpression
  235                | PreDecrementExpression
  236                | '+' UnaryExpression
  237                | '-' UnaryExpression
  238                | UnaryExpressionNotPlusMinus

  239 PreIncrementExpression: INC_OP UnaryExpression

  240 PreDecrementExpression: DEC_OP UnaryExpression

  241 UnaryExpressionNotPlusMinus: PostfixExpression
  242                            | '~' UnaryExpression
  243                            | '!' UnaryExpression
  244                            | CastExpression

  245 PostfixExpression: Primary
  246                  | Name
  247                  | PostIncrementExpression
  248                  | PostDecrementExpression

  249 PostIncrementExpression: PostfixExpression INC_OP

  250 PostDecrementExpression: PostfixExpression DEC_OP

  251 CastExpression: '(' PrimitiveType ')' UnaryExpression

  252 G: Identifier

  253 S: %empty

  254 NEXT_QUAD: %empty

  255 ChangeTable: %empty

  256 A: %empty


Terminals, with rules where they appear

    $end (0) 0
    '!' <str> (33) 243
    '%' <str> (37) 232
    '&' <str> (38) 213
    '(' <str> (40) 60 61 75 118 122 123 128 129 155 162 172 173 251
    ')' <str> (41) 60 61 75 118 122 123 128 129 155 162 172 173 251
    '*' <str> (42) 230
    '+' <str> (43) 227 236
    ',' <str> (44) 49 67 140 175
    '-' <str> (45) 228 237
    '.' <str> (46) 24 160 161 167 173
    '/' <str> (47) 231
    ':' <str> (58) 107 108 129 199
    ';' <str> (59) 30 46 47 70 75 86 101 109 128 141 142 143 144 145 146 147
    '<' <str> (60) 168 218
    '=' <str> (61) 51 187
    '>' <str> (62) 168 219
    '?' <str> (63) 201
    '[' <str> (91) 19 20 53 169 170 179
    ']' <str> (93) 19 20 53 169 170 179
    '^' <str> (94) 211
    '{' <str> (123) 39 73 74 80 81
    '|' <str> (124) 209
    '}' <str> (125) 39 73 74 80 81
    '~' <str> (126) 242
    error (256)
    RIGHT_OP <str> (258) 224
    LEFT_OP <str> (259) 223
    EQ_OP <str> (260) 215
    NE_OP <str> (261) 216
    AND_OP <str> (262) 208
    OR_OP <str> (263) 205
    LE_OP <str> (264) 221
    GE_OP <str> (265) 220
    ADD_ASSIGN <str> (266) 191
    SUB_ASSIGN <str> (267) 192
    MUL_ASSIGN <str> (268) 189
    DIV_ASSIGN <str> (269) 188
    MOD_ASSIGN <str> (270) 190
    LEFT_ASSIGN <str> (271) 193
    RIGHT_ASSIGN <str> (272) 194
    AND_ASSIGN <str> (273) 196
    XOR_ASSIGN <str> (274) 197
    OR_ASSIGN <str> (275) 198
    UNSIGNED_RIGHT <str> (276) 225
    UNSIGNED_RIGHT_ASSIGN <str> (277) 195
    integerLiteral <str> (278) 1
    stringLiteral <str> (279) 5
    nullLiteral <str> (280) 7
    characterLiteral <str> (281) 4
    textBlock <str> (282) 6
    booleanLiteral <str> (283) 3
    FloatingPointLiteral <str> (284) 2
    Identifier <str> (285) 23 52 62 252
    CONTINUE <str> (286) 143 144
    FOR <str> (287) 128 129
    NEW <str> (288) 162 176
    IF <str> (289) 118
    PACKAGE <str> (290)
    BOOLEAN <str> (291) 9
    PRIVATE <str> (292) 36
    THIS <str> (293) 75 154
    BREAK <str> (294) 141 142
    DOUBLE <str> (295) 18
    THROW <str> (296) 147
    BYTE <str> (297) 12
    ELSE <str> (298) 120 121
    PUBLIC <str> (299) 35
    RETURN <str> (300) 145 146
    INT <str> (301) 14
    SHORT <str> (302) 13
    CHAR <str> (303) 16
    FINAL <str> (304) 38
    STATIC <str> (305) 37 71
    VOID <str> (306) 59
    CLASS <str> (307) 31 32
    LONG <str> (308) 15
    FLOAT <str> (309) 17
    WHILE <str> (310) 122 123
    _ <str> (311)
    YIELD <str> (312)
    eof <str> (313)
    INC_OP <str> (314) 239 249
    DEC_OP <str> (315) 240 250


Nonterminals, with rules where they appear

    $accept (85)
        on left: 0
    Literal <ptr> (86)
        on left: 1 2 3 4 5 6 7
        on right: 153
    PrimitiveType <ptr> (87)
        on left: 8 9
        on right: 46 47 55 56 68 88 176 251
    NumericType <ptr> (88)
        on left: 10 11
        on right: 8
    IntegralType <ptr> (89)
        on left: 12 13 14 15 16
        on right: 10
    FloatingPointType <ptr> (90)
        on left: 17 18
        on right: 11
    Dims <ptr> (91)
        on left: 19 20
        on right: 20 65
    Name <ptr> (92)
        on left: 21 22
        on right: 24 160 169 172 185 246
    SimpleName <ptr> (93)
        on left: 23
        on right: 21 24 107 108 141 143 163 167 173
    QualifiedName <ptr> (94)
        on left: 24
        on right: 22
    CompilationUnit <ptr> (95)
        on left: 25
        on right: 0
    OrdinaryCompilationUnit <ptr> (96)
        on left: 26
        on right: 25
    TopLevelClassOrInterfaceDeclarations <ptr> (97)
        on left: 27 28
        on right: 26 28
    TopLevelClassOrInterfaceDeclaration <ptr> (98)
        on left: 29 30
        on right: 28
    ClassDeclaration <ptr> (99)
        on left: 31 32
        on right: 29 87
    Modifiers <ptr> (100)
        on left: 33 34
        on right: 31 34 46 55 57 72
    Modifier <ptr> (101)
        on left: 35 36 37 38
        on right: 33 34
    ClassBody <ptr> (102)
        on left: 39
        on right: 31 32 79
    ClassBodyDeclarations <ptr> (103)
        on left: 40 41
        on right: 39 41
    ClassBodyDeclaration <ptr> (104)
        on left: 42 43 44 45
        on right: 41
    FieldDeclaration <ptr> (105)
        on left: 46 47
        on right: 42
    VariableDeclaratorList <ptr> (106)
        on left: 48 49
        on right: 46 47 49 88
    VariableDeclarator <ptr> (107)
        on left: 50 51
        on right: 48 49
    Declarator <ptr> (108)
        on left: 52 53
        on right: 50 51 53
    MethodDeclaration <ptr> (109)
        on left: 54
        on right: 43
    MethodHeader <ptr> (110)
        on left: 55 56 57 58
        on right: 54
    VOID2 <ptr> (111)
        on left: 59
        on right: 57 58
    MethodorConstrDeclarator <ptr> (112)
        on left: 60 61
        on right: 55 56 57 58 72
    SimpleName2 <ptr> (113)
        on left: 62
        on right: 60 61 68
    VariableInitializer <ptr> (114)
        on left: 63
        on right: 51
    Dimsy <ptr> (115)
        on left: 64 65
        on right: 61 68 176
    FormalParameterList <ptr> (116)
        on left: 66 67
        on right: 60 67
    FormalParameter <ptr> (117)
        on left: 68
        on right: 66 67
    MethodBody <ptr> (118)
        on left: 69 70
        on right: 54
    StaticInitializer <ptr> (119)
        on left: 71
        on right: 44
    ConstructorDeclaration <ptr> (120)
        on left: 72
        on right: 45
    ConstructorBody <ptr> (121)
        on left: 73 74
        on right: 72
    ExplicitConstructorInvocation <ptr> (122)
        on left: 75
        on right: 73
    ArgumentListy <ptr> (123)
        on left: 76 77
        on right: 75 162 172 173
    ClassBodyy <ptr> (124)
        on left: 78 79
        on right: 162
    Block <ptr> (125)
        on left: 80 81
        on right: 69 71 100
    BlockStatements <ptr> (126)
        on left: 82 83
        on right: 73 74 80 83
    BlockStatement <ptr> (127)
        on left: 84 85
        on right: 82 83
    Declaration_list <ptr> (128)
        on left: 86 87
        on right: 84
    LocalVariableDeclaration <ptr> (129)
        on left: 88
        on right: 86 129 137
    Statement <ptr> (130)
        on left: 89 90 91 92 93 94
        on right: 85 107 119 120 122 124 125
    StatementNoShortIf <ptr> (131)
        on left: 95 96 97 98 99
        on right: 108 120 121 123 126 127
    StatementWithoutTrailingSubstatement <ptr> (132)
        on left: 100 101 102 103 104 105 106
        on right: 89 95
    LabeledStatement <ptr> (133)
        on left: 107
        on right: 90
    LabeledStatementNoShortIf <ptr> (134)
        on left: 108
        on right: 96
    ExpressionStatement <ptr> (135)
        on left: 109
        on right: 102
    StatementExpression <ptr> (136)
        on left: 110 111 112 113 114 115 116
        on right: 109 139 140 149
    IF_CODE <ptr> (137)
        on left: 118
        on right: 119 120 121
    $@1 (138)
        on left: 117
        on right: 118
    IfThenStatement <ptr> (139)
        on left: 119
        on right: 91
    IfThenElseStatement <ptr> (140)
        on left: 120
        on right: 92
    IfThenElseStatementNoShortIf <ptr> (141)
        on left: 121
        on right: 97
    WhileStatement <ptr> (142)
        on left: 122
        on right: 93
    WhileStatementNoShortIf <ptr> (143)
        on left: 123
        on right: 98
    ForStatement <ptr> (144)
        on left: 124 125
        on right: 94
    ForStatementNoShortIf <ptr> (145)
        on left: 126 127
        on right: 99
    BasicForHeader <ptr> (146)
        on left: 128
        on right: 124 126
    EnhancedForHeader <ptr> (147)
        on left: 129
        on right: 125 127
    ForInity <ptr> (148)
        on left: 130 131
        on right: 128
    Expressiony <ptr> (149)
        on left: 132 133
        on right: 128
    ForUpdatey <ptr> (150)
        on left: 134 135
        on right: 128
    ForInit <ptr> (151)
        on left: 136 137
        on right: 131
    ForUpdate <ptr> (152)
        on left: 138
        on right: 135
    StatementExpressionList <ptr> (153)
        on left: 139 140
        on right: 136 138 140
    BreakStatement <ptr> (154)
        on left: 141 142
        on right: 103
    ContinueStatement <ptr> (155)
        on left: 143 144
        on right: 104
    ReturnStatement <ptr> (156)
        on left: 145 146
        on right: 105
    ThrowStatement <ptr> (157)
        on left: 147
        on right: 106
    EXPR_CODE <ptr> (158)
        on left: 149
        on right: 122 123
    $@2 (159)
        on left: 148
        on right: 149
    N <ptr> (160)
        on left: 150
        on right: 120 121
    Primary <ptr> (161)
        on left: 151 152
        on right: 161 173 245
    PrimaryNoNewArray <ptr> (162)
        on left: 153 154 155 156 157 158
        on right: 151
    ClassInstanceCreationExpression <ptr> (163)
        on left: 159 160 161
        on right: 116 156
    UnqualifiedClassInstanceCreationExpression <ptr> (164)
        on left: 162
        on right: 159 160 161
    ClassOrInterfaceTypeToInstantiate <ptr> (165)
        on left: 163
        on right: 162
    TypeArgumentsOrDiamondy <ptr> (166)
        on left: 164 165
        on right: 163
    ClassOrInterfaceTypeToInstant <ptr> (167)
        on left: 166 167
        on right: 163 167
    TypeArgumentsOrDiamond <ptr> (168)
        on left: 168
        on right: 165
    ArrayAccess <ptr> (169)
        on left: 169 170
        on right: 157 170 186
    MethodInvocation <ptr> (170)
        on left: 172 173
        on right: 115 158
    $@3 (171)
        on left: 171
        on right: 172
    ArgumentList <ptr> (172)
        on left: 174 175
        on right: 77 175
    ArrayCreationExpression <ptr> (173)
        on left: 176
        on right: 152
    DimExprs <ptr> (174)
        on left: 177 178
        on right: 176 178
    DimExpr <ptr> (175)
        on left: 179
        on right: 177 178
    Expression <ptr> (176)
        on left: 180
        on right: 63 118 129 133 145 147 155 169 170 174 175 179 199
    AssignmentExpression <ptr> (177)
        on left: 181 182
        on right: 180 184
    Assignment <ptr> (178)
        on left: 184
        on right: 110 181
    $@4 (179)
        on left: 183
        on right: 184
    LeftHandSide <ptr> (180)
        on left: 185 186
        on right: 184
    AssignmentOperator <ptr> (181)
        on left: 187 188 189 190 191 192 193 194 195 196 197 198
        on right: 184
    ConditionalExpression <ptr> (182)
        on left: 199 200
        on right: 182 199
    GOTO_COND <ptr> (183)
        on left: 201
        on right: 199
    WRITE_GOTO <ind> (184)
        on left: 202
        on right: 199
    ConditionalOrExpression <ptr> (185)
        on left: 203 204
        on right: 200 201 205
    GOTO_OR <ptr> (186)
        on left: 205
        on right: 203
    ConditionalAndExpression <ptr> (187)
        on left: 206 207
        on right: 203 204 208
    GOTO_AND <ptr> (188)
        on left: 208
        on right: 206
    InclusiveOrExpression <ptr> (189)
        on left: 209 210
        on right: 206 207 209
    ExclusiveOrExpression <ptr> (190)
        on left: 211 212
        on right: 209 210 211
    AndExpression <ptr> (191)
        on left: 213 214
        on right: 211 212 213
    EqualityExpression <ptr> (192)
        on left: 215 216 217
        on right: 213 214 215 216
    RelationalExpression <ptr> (193)
        on left: 218 219 220 221 222
        on right: 215 216 217 218 219 220 221
    ShiftExpression <ptr> (194)
        on left: 223 224 225 226
        on right: 218 219 220 221 222 223 224 225
    AdditiveExpression <ptr> (195)
        on left: 227 228 229
        on right: 223 224 225 226 227 228
    MultiplicativeExpression <ptr> (196)
        on left: 230 231 232 233
        on right: 227 228 229 230 231 232
    UnaryExpression <ptr> (197)
        on left: 234 235 236 237 238
        on right: 230 231 232 233 236 237 239 240 242 243 251
    PreIncrementExpression <ptr> (198)
        on left: 239
        on right: 111 234
    PreDecrementExpression <ptr> (199)
        on left: 240
        on right: 112 235
    UnaryExpressionNotPlusMinus <ptr> (200)
        on left: 241 242 243 244
        on right: 238
    PostfixExpression <ptr> (201)
        on left: 245 246 247 248
        on right: 241 249 250
    PostIncrementExpression <ptr> (202)
        on left: 249
        on right: 113 247
    PostDecrementExpression <ptr> (203)
        on left: 250
        on right: 114 248
    CastExpression <ptr> (204)
        on left: 251
        on right: 244
    G <ptr> (205)
        on left: 252
        on right: 31 32
    S <ptr> (206)
        on left: 253
        on right: 31 32
    NEXT_QUAD <ind> (207)
        on left: 254
        on right: 60 67 83 107 108 119 120 121 122 123 199 203 206
    ChangeTable <ptr> (208)
        on left: 255
        on right: 80 81
    A <ptr> (209)
        on left: 256
        on right: 60 61


State 0

    0 $accept: . CompilationUnit $end

    $default  reduce using rule 27 (TopLevelClassOrInterfaceDeclarations)

    CompilationUnit                       go to state 1
    OrdinaryCompilationUnit               go to state 2
    TopLevelClassOrInterfaceDeclarations  go to state 3


State 1

    0 $accept: CompilationUnit . $end

    $end  shift, and go to state 4


State 2

   25 CompilationUnit: OrdinaryCompilationUnit .

    $default  reduce using rule 25 (CompilationUnit)


State 3

   26 OrdinaryCompilationUnit: TopLevelClassOrInterfaceDeclarations .
   28 TopLevelClassOrInterfaceDeclarations: TopLevelClassOrInterfaceDeclarations . TopLevelClassOrInterfaceDeclaration

    ';'      shift, and go to state 5
    PRIVATE  shift, and go to state 6
    PUBLIC   shift, and go to state 7
    FINAL    shift, and go to state 8
    STATIC   shift, and go to state 9
    CLASS    shift, and go to state 10

    $default  reduce using rule 26 (OrdinaryCompilationUnit)

    TopLevelClassOrInterfaceDeclaration  go to state 11
    ClassDeclaration                     go to state 12
    Modifiers                            go to state 13
    Modifier                             go to state 14


State 4

    0 $accept: CompilationUnit $end .

    $default  accept


State 5

   30 TopLevelClassOrInterfaceDeclaration: ';' .

    $default  reduce using rule 30 (TopLevelClassOrInterfaceDeclaration)


State 6

   36 Modifier: PRIVATE .

    $default  reduce using rule 36 (Modifier)


State 7

   35 Modifier: PUBLIC .

    $default  reduce using rule 35 (Modifier)


State 8

   38 Modifier: FINAL .

    $default  reduce using rule 38 (Modifier)


State 9

   37 Modifier: STATIC .

    $default  reduce using rule 37 (Modifier)


State 10

   32 ClassDeclaration: CLASS . G S ClassBody

    Identifier  shift, and go to state 15

    G  go to state 16


State 11

   28 TopLevelClassOrInterfaceDeclarations: TopLevelClassOrInterfaceDeclarations TopLevelClassOrInterfaceDeclaration .

    $default  reduce using rule 28 (TopLevelClassOrInterfaceDeclarations)


State 12

   29 TopLevelClassOrInterfaceDeclaration: ClassDeclaration .

    $default  reduce using rule 29 (TopLevelClassOrInterfaceDeclaration)


State 13

   31 ClassDeclaration: Modifiers . CLASS G S ClassBody

    CLASS  shift, and go to state 17


State 14

   33 Modifiers: Modifier .
   34          | Modifier . Modifiers

    PRIVATE  shift, and go to state 6
    PUBLIC   shift, and go to state 7
    FINAL    shift, and go to state 8
    STATIC   shift, and go to state 9

    $default  reduce using rule 33 (Modifiers)

    Modifiers  go to state 18
    Modifier   go to state 14


State 15

  252 G: Identifier .

    $default  reduce using rule 252 (G)


State 16

   32 ClassDeclaration: CLASS G . S ClassBody

    $default  reduce using rule 253 (S)

    S  go to state 19


State 17

   31 ClassDeclaration: Modifiers CLASS . G S ClassBody

    Identifier  shift, and go to state 15

    G  go to state 20


State 18

   34 Modifiers: Modifier Modifiers .

    $default  reduce using rule 34 (Modifiers)


State 19

   32 ClassDeclaration: CLASS G S . ClassBody

    '{'  shift, and go to state 21

    ClassBody  go to state 22


State 20

   31 ClassDeclaration: Modifiers CLASS G . S ClassBody

    $default  reduce using rule 253 (S)

    S  go to state 23


State 21

   39 ClassBody: '{' . ClassBodyDeclarations '}'

    $default  reduce using rule 40 (ClassBodyDeclarations)

    ClassBodyDeclarations  go to state 24


State 22

   32 ClassDeclaration: CLASS G S ClassBody .

    $default  reduce using rule 32 (ClassDeclaration)


State 23

   31 ClassDeclaration: Modifiers CLASS G S . ClassBody

    '{'  shift, and go to state 21

    ClassBody  go to state 25


State 24

   39 ClassBody: '{' ClassBodyDeclarations . '}'
   41 ClassBodyDeclarations: ClassBodyDeclarations . ClassBodyDeclaration

    '}'      shift, and go to state 26
    BOOLEAN  shift, and go to state 27
    PRIVATE  shift, and go to state 6
    DOUBLE   shift, and go to state 28
    BYTE     shift, and go to state 29
    PUBLIC   shift, and go to state 7
    INT      shift, and go to state 30
    SHORT    shift, and go to state 31
    CHAR     shift, and go to state 32
    FINAL    shift, and go to state 8
    STATIC   shift, and go to state 33
    VOID     shift, and go to state 34
    LONG     shift, and go to state 35
    FLOAT    shift, and go to state 36

    PrimitiveType           go to state 37
    NumericType             go to state 38
    IntegralType            go to state 39
    FloatingPointType       go to state 40
    Modifiers               go to state 41
    Modifier                go to state 14
    ClassBodyDeclaration    go to state 42
    FieldDeclaration        go to state 43
    MethodDeclaration       go to state 44
    MethodHeader            go to state 45
    VOID2                   go to state 46
    StaticInitializer       go to state 47
    ConstructorDeclaration  go to state 48


State 25

   31 ClassDeclaration: Modifiers CLASS G S ClassBody .

    $default  reduce using rule 31 (ClassDeclaration)


State 26

   39 ClassBody: '{' ClassBodyDeclarations '}' .

    $default  reduce using rule 39 (ClassBody)


State 27

    9 PrimitiveType: BOOLEAN .

    $default  reduce using rule 9 (PrimitiveType)


State 28

   18 FloatingPointType: DOUBLE .

    $default  reduce using rule 18 (FloatingPointType)


State 29

   12 IntegralType: BYTE .

    $default  reduce using rule 12 (IntegralType)


State 30

   14 IntegralType: INT .

    $default  reduce using rule 14 (IntegralType)


State 31

   13 IntegralType: SHORT .

    $default  reduce using rule 13 (IntegralType)


State 32

   16 IntegralType: CHAR .

    $default  reduce using rule 16 (IntegralType)


State 33

   37 Modifier: STATIC .
   71 StaticInitializer: STATIC . Block

    '{'  shift, and go to state 49

    $default  reduce using rule 37 (Modifier)

    Block  go to state 50


State 34

   59 VOID2: VOID .

    $default  reduce using rule 59 (VOID2)


State 35

   15 IntegralType: LONG .

    $default  reduce using rule 15 (IntegralType)


State 36

   17 FloatingPointType: FLOAT .

    $default  reduce using rule 17 (FloatingPointType)


State 37

   47 FieldDeclaration: PrimitiveType . VariableDeclaratorList ';'
   56 MethodHeader: PrimitiveType . MethodorConstrDeclarator

    Identifier  shift, and go to state 51

    VariableDeclaratorList    go to state 52
    VariableDeclarator        go to state 53
    Declarator                go to state 54
    MethodorConstrDeclarator  go to state 55
    SimpleName2               go to state 56


State 38

    8 PrimitiveType: NumericType .

    $default  reduce using rule 8 (PrimitiveType)


State 39

   10 NumericType: IntegralType .

    $default  reduce using rule 10 (NumericType)


State 40

   11 NumericType: FloatingPointType .

    $default  reduce using rule 11 (NumericType)


State 41

   46 FieldDeclaration: Modifiers . PrimitiveType VariableDeclaratorList ';'
   55 MethodHeader: Modifiers . PrimitiveType MethodorConstrDeclarator
   57             | Modifiers . VOID2 MethodorConstrDeclarator
   72 ConstructorDeclaration: Modifiers . MethodorConstrDeclarator ConstructorBody

    Identifier  shift, and go to state 57
    BOOLEAN     shift, and go to state 27
    DOUBLE      shift, and go to state 28
    BYTE        shift, and go to state 29
    INT         shift, and go to state 30
    SHORT       shift, and go to state 31
    CHAR        shift, and go to state 32
    VOID        shift, and go to state 34
    LONG        shift, and go to state 35
    FLOAT       shift, and go to state 36
